--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8-jdk-alpine
 
-ADD target/final.jar /final.jar
-RUN sh -c 'touch /final.jar'
-ENTRYPOINT ["java","-Dspring.profiles.active=local", "-Djava.security.egd=file:/dev/./urandom","-jar","/final.jar"]
+ADD target/docker-acme.jar /docker-acme.jar
+RUN sh -c 'touch /docker-acme.jar'
+ENTRYPOINT ["java","-Dspring.profiles.active=local", "-Djava.security.egd=file:/dev/./urandom","-jar","/docker-acme.jar"]
